# tecni-docs

./: README.md
biostar-adapter/: .gitignore  pyproject.toml
biostar-adapter/src/biostar_adapter/: __init__.py
biostar-adapter/src/biostar_adapter/common/: results.py  utility.py
biostar-adapter/src/biostar_adapter/core/application/errors/: application_errors.py
biostar-adapter/src/biostar_adapter/core/application/events/: base_event.py  device_events.py  event_bus.py  people_events.py  scheduled_access_events.py
biostar-adapter/src/biostar_adapter/core/application/use_cases/: devices_use_cases.py  people_use_cases.py
biostar-adapter/src/biostar_adapter/core/domain/entities/: access_entity.py  device_entity.py  person_entity.py
biostar-adapter/src/biostar_adapter/core/domain/repositories/: devices_repository.py  people_repository.py
biostar-adapter/src/biostar_adapter/infrastructure/biostar/adapters/devices/: devices_adapter.py  devices_errors.py  devices_serializers.py
biostar-adapter/src/biostar_adapter/infrastructure/biostar/adapters/people/: people_adapter.py  people_errors.py  people_serializers.py
biostar-adapter/src/biostar_adapter/infrastructure/biostar/http/: http_connection.py
biostar-adapter/src/biostar_adapter/infrastructure/biostar/ws/: ws_connection.py  ws_handlers.py
biostar-adapter/src/biostar_adapter/infrastructure/scheduler/: scheduler_service.py
biostar-adapter/src/biostar_adapter/lib/: adapter.py
